[package]
name = "arcdex"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-channel = "0.3.25"
futures-util = "0.3.25"
rand = "0.8.5"
tokio = { version = "1", features = ["full", "tracing", "signal"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
tungstenite = "0.17"
url = "2.3.1"
